<resources>
    <string name="app_name">En Uygun Case</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="basket">Basket</string>
    <string name="basket_title">BASKET</string>
    <string name="checkout">CHECKOUT</string>
    <string name="pay">PAY</string>
    <string name="products">Ürünler</string>
    <string name="product_count">(Toplam (%1$s) adet)</string>
    <string name="search_product">Search Product</string>
    <string name="filter">Filter</string>
    <string name="total">Total:</string>
    <string name="discount">Discount:</string>
    <string name="basket_price">Price:</string>
    <string name="price">%1$s TL</string>
    <string name="payment_product_count">x%1$s</string>
    <string name="product_discount">%1$s</string>
    <string name="strike_price">%1$s TL</string>
    <string name="sort">Sort</string>
    <string name="sort_title">Sırala</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="descreasing_price">Fiyatı Azalan</string>
    <string name="inscreasing_price">Fiyatı Artan</string>
    <string name="most_discount">En Fazla İndirim</string>
    <string name="apply">UYGULA</string>
    <string name="categories">Kategoriler</string>
    <string name="price_filter">Fiyat</string>
    <string name="discount_filter">İndirim</string>
    <string name="complete_payment">Ödemeni Tamamla</string>
    <string name="payment">Payment</string>
    <string name="card_name">Kart İsmi</string>
    <string name="card_number">Kart Numarası</string>
    <string name="card_date">Kartın Son Kullanma Tarihi</string>

    <string name="min">En az</string>

    <string name="max">En Fazla</string>
</resources>