<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/pin"
        android:layout_width="@dimen/unit44"
        android:layout_height="@dimen/unit4"
        android:layout_marginTop="@dimen/unit8"
        android:background="@drawable/bg_bottom_sheet_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sort_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/unit14"
        android:layout_marginTop="@dimen/unit12"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sort_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin" />

    <TextView
        android:id="@+id/tv_descreasing_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/unit14"
        android:layout_marginTop="@dimen/unit20"
        android:fontFamily="@font/inter_medium"
        android:text="@string/descreasing_price"
        android:textColor="@color/phantom_hue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sort_title" />

    <TextView
        android:id="@+id/tv_increasing_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/unit14"
        android:layout_marginTop="@dimen/unit20"
        android:fontFamily="@font/inter_medium"
        android:text="@string/inscreasing_price"
        android:textColor="@color/phantom_hue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descreasing_price" />

    <TextView
        android:id="@+id/tv_most_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/unit14"
        android:layout_marginTop="@dimen/unit20"
        android:layout_marginBottom="@dimen/unit20"
        android:fontFamily="@font/inter_medium"
        android:text="@string/most_discount"
        android:textColor="@color/phantom_hue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_increasing_price" />

</androidx.constraintlayout.widget.ConstraintLayout>