<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_basket_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit20"
            android:fontFamily="@font/inter_bold"
            android:text="@string/basket_title"
            android:textColor="@color/eerie_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_product_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/unit13"
            app:layout_constraintBottom_toTopOf="@+id/tv_price_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_basket_title">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv_home_products"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_basket_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:itemCount="4"
                        tools:listitem="@layout/item_basket_product" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/tv_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit2"
            android:fontFamily="@font/inter_bold"
            android:text="@string/basket_price"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_discount_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit2"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_discount_title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2345 TL" />

        <TextView
            android:id="@+id/tv_discount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit2"
            android:fontFamily="@font/inter_bold"
            android:text="@string/discount"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_total_price"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit2"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_total_price"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="%34" />

        <TextView
            android:id="@+id/tv_total_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit52"
            android:fontFamily="@font/inter_bold"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_checkout_button"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit52"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_checkout_button"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="1234 TL" />

        <TextView
            android:id="@+id/tv_checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/unit20"
            android:layout_marginBottom="@dimen/unit30"
            android:background="@drawable/bg_r10_button"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:padding="@dimen/unit14"
            android:text="@string/checkout"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>