<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit27"
            android:layout_marginTop="@dimen/unit62"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/products"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_product_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit2"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/antarctica_1"
                android:layout_gravity="center"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                tools:text="(Toplam 576 ürün)" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home_action_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/unit22"
            android:layout_marginTop="@dimen/unit13"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_home_title">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_r10_with_stroke_1"
                android:drawableStart="@drawable/ic_search"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/search_product"
                android:padding="@dimen/unit8"
                android:textColorHint="@color/antarctica_1"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit19"
                android:background="@drawable/bg_r10_with_stroke_1"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:padding="@dimen/unit8"
                android:text="@string/filter"
                android:textColor="@color/antarctica_1"
                android:textSize="9sp"
                app:drawableStartCompat="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_sort_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit8"
                android:background="@drawable/bg_r10_with_stroke_1"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:padding="@dimen/unit8"
                android:text="@string/sort"
                android:textColor="@color/antarctica_1"
                android:textSize="9sp"
                app:drawableStartCompat="@drawable/ic_sort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_home_products"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/unit20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_home_action_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_product" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
